[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "screenshot-covers"
description = ''
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "Waylon S. Walker", email = "waylon@waylonwalker.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ['requests', 'selenium', 'lxml', 'pillow']
dynamic = ["version"]

[project.scripts]
screenshot-covers = "screenshot_covers.screenshot:main"

[project.urls]
Documentation = "https://github.com/waylonwalker/covers.waylonwalker.com#readme"
Issues = "https://github.com/waylonwalker/covers.waylonwalker.com/issues"
Source = "https://github.com/waylonwalker/covers.waylonwalker.com"

[tool.hatch.version]
path = "screenshot_covers/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=screenshot_covers --cov=tests"
no-cov = "cov --no-cov"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "screenshot_covers/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
